updated css and js

--- a/index.html
+++ b/index.html
@@ -20,27 +20,37 @@
         </div>
         <label for="answer" >Answer</label>
         <input type="text" id ="answer">
-        <button id="reset">reset</button>
-    </form>
+        <input id ="clear" type = "button" onClick = "res()" value ="Clear">
+     </form>
 
-    <form action="" id ="calculator">
-        <button id="one">1</button>
-        <button id="two">2</button> 
-        <button id="three">3</button>
-        <button id="four">4</button>  
-        <button id="five">5</button>  
-        <button id="six">6</button>
-        <button id="seven">7</button> 
-        <button id="eight">8</button>
-        <button id="nine">9</button>  
-        <button id="0">0</button>
-        <button id="subtract">-</button> 
-        <button id="add">+</button>
-        <button id="divide">/</button>  
+    <!-- <form action="" id ="calculator">
+        <button id="uno" value=1>1</button>
+        <button id="dos" value=2>2</button> 
+        <button id="three" value=3>3</button>
+        <button id="four" value=4>4</button>  
+        <button id="five" value=5>5</button>  
+        <button id="six" value=6>6</button>
+        <button id="seven" value=7> 7</button> 
+        <button id="eight" value=8>8</button>
+        <button id="nine" value=9>9</button>  
+        <button id="0" value=0>0</button>
+        <button id="subtract" value= '-'>-</button> 
+        <button id="add" value= '+'>+</button>
+        <button id="times" value= '*'>*</button>
+
+        <button id="divide" value = '/'>/</button>  
+        <button id="decimal" value = '.'>.</button>  
+        
+        <button id="equal" value = '='>=</button>  
+
+        <input type="text" id ="total">
 
 
 
-    </form>
+
+
+
+    </form> -->
 
         <script src ='main.js'></script>
 </body>
