added calculator css but only clear button works

--- a/index.html
+++ b/index.html
@@ -23,34 +23,27 @@
         <input id ="clear" type = "button" onClick = "res()" value ="Clear">
      </form>
 
-    <!-- <form action="" id ="calculator">
-        <button id="uno" value=1>1</button>
-        <button id="dos" value=2>2</button> 
-        <button id="three" value=3>3</button>
-        <button id="four" value=4>4</button>  
-        <button id="five" value=5>5</button>  
-        <button id="six" value=6>6</button>
+    <form action="" id ="calculator">
+        <button id="rest" value=c onClick = "res()">C</button>
+        <input type="text" id ="total">
         <button id="seven" value=7> 7</button> 
         <button id="eight" value=8>8</button>
         <button id="nine" value=9>9</button>  
+        <button id="div" value = '/'>/</button>  
+        <button id="four" value=4>4</button>  
+        <button id="five" value=5>5</button>  
+        <button id="six" value=6>6</button>
+        <button id="mult" value= 'X'>*</button>
+
+        <button id="uno" value=1>1</button>
+        <button id="dos" value=2>2</button> 
+        <button id="three" value=3>3</button>
         <button id="0" value=0>0</button>
-        <button id="subtract" value= '-'>-</button> 
-        <button id="add" value= '+'>+</button>
-        <button id="times" value= '*'>*</button>
-
-        <button id="divide" value = '/'>/</button>  
         <button id="decimal" value = '.'>.</button>  
-        
+        <button id="sub" value= '-'>-</button> 
+        <button id="plus" value= '+'>+</button>
         <button id="equal" value = '='>=</button>  
-
-        <input type="text" id ="total">
-
-
-
-
-
-
-    </form> -->
+    </form>
 
         <script src ='main.js'></script>
 </body>
