--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <form action="" id ="form">
+        <h3>Simple Calculator</h3>
         <label for="first-no" >First Number</label>
-        <input type="text" id ="first-no">
+        <input type="number" id ="first-no">
         <label for="second-no" >Second Number</label>
-        <input type="text" id = "second-no">
+        <input type="number" id = "second-no">
         <div id ="button1">
             <button id="times">x</button>
             <button id="subtract">-</button> 
@@ -19,31 +20,36 @@
             <button id="divide">/</button>  
         </div>
         <label for="answer" >Answer</label>
-        <input type="text" id ="answer">
+        <input type="number" id ="answer">
         <input id ="clear" type = "button" onClick = "res()" value ="Clear">
      </form>
 
-    <form action="" id ="calculator">
-        <button id="rest" value=c onClick = "res()">C</button>
+    <!-- <form action="" id ="calculator">
+        <button id="rest"type="button" onClick = "res()">C</button>
         <input type="text" id ="total">
-        <button id="seven" value=7> 7</button> 
-        <button id="eight" value=8>8</button>
-        <button id="nine" value=9>9</button>  
-        <button id="div" value = '/'>/</button>  
-        <button id="four" value=4>4</button>  
-        <button id="five" value=5>5</button>  
-        <button id="six" value=6>6</button>
-        <button id="mult" value= 'X'>*</button>
+        <div id="number">
+            <button id="seven" value=7> 7</button> 
+            <button id="eight" value=8>8</button>
+            <button id="nine" value=9>9</button>  
+            <button id="four" value=4>4</button>  
+            <button id="five" value=5>5</button>  
+            <button id="six" value=6>6</button>
+            <button id="uno" value=1>1</button>
+             <button id="dos" value=2>2</button> 
+            <button id="three" value=3>3</button>
+            <button id="0" value=0>0</button>
 
-        <button id="uno" value=1>1</button>
-        <button id="dos" value=2>2</button> 
-        <button id="three" value=3>3</button>
-        <button id="0" value=0>0</button>
-        <button id="decimal" value = '.'>.</button>  
-        <button id="sub" value= '-'>-</button> 
-        <button id="plus" value= '+'>+</button>
-        <button id="equal" value = '='>=</button>  
-    </form>
+        </div>    
+        <button id="div" data-op = '/'>/</button>  
+
+        <button id="mult" data-op= 'X'>*</button>
+
+
+        <button id="decimal" data-value = '.'>.</button>  
+        <button id="sub" data-op= '-'>-</button> 
+        <button id="plus" data-op= '+'>+</button>
+        <button id="equal" data-tot = '='>=</button>  
+    </form> -->
 
         <script src ='main.js'></script>
 </body>
